Bug 337927 - KCMUtils build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Summary: KCMUtils build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcmutils
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL: https://qt.gitorious.org/qt/qtbase/co...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-30 21:35 UTC by Hrvoje Senjan
Modified: 2014-08-01 16:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-07-30 21:35:06 UTC
log goes:

[   74s] In file included from /usr/include/qt5/QtCore/QSharedDataPointer:1:0,
[   74s]                  from /usr/include/KF5/KService/kserviceaction.h:24,
[   74s]                  from /usr/include/KF5/KService/kservice.h:24,
[   74s]                  from /home/abuild/rpmbuild/BUILD/kcmutils-5.0.0git~1406115012~dfffb8a/src/kcmoduleinfo.h:28,
[   74s]                  from /home/abuild/rpmbuild/BUILD/kcmutils-5.0.0git~1406115012~dfffb8a/src/kcmultidialog.h:26,
[   74s]                  from /home/abuild/rpmbuild/BUILD/kcmutils-5.0.0git~1406115012~dfffb8a/src/ksettings/dialog.h:24,
[   74s]                  from /home/abuild/rpmbuild/BUILD/kcmutils-5.0.0git~1406115012~dfffb8a/src/ksettings/dialog.cpp:20:
[   74s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KService]':
[   74s] /home/abuild/rpmbuild/BUILD/kcmutils-5.0.0git~1406115012~dfffb8a/src/ksettings/dialog.cpp:160:52:   required from here
[   74s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KService*' [-fpermissive]
[   74s]          : d(o.data())
[   74s]
Comment 1 Kevin Funk 2014-08-01 16:53:15 UTC
Git commit 936e9e2bbdb9e0919d78089bea0915ad4940085a by Kevin Funk.
Committed on 01/08/2014 at 16:51.
Pushed by kfunk into branch 'master'.

Make compile with Qt 5.4

M  +2    -1    src/ksettings/dialog.cpp

http://commits.kde.org/kcmutils/936e9e2bbdb9e0919d78089bea0915ad4940085a